--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
       <button class="removeItemButton">Remove last item</button>
     </div>
     <script src="app.js"></script>
+    <script type="text/javascript" src="temp.js"></script>
   </body>
 </html>
